crates/ty_python_semantic/resources/mdtest/snapshots/Unresolved_import_di…_-_unresolved_import.md_-_Using_`from`_with_an…_(9c2ea2c6237a8962).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Unresolved import diagnostics - unresolved_import.md - Using `from` with an unknown nested module
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## mdtest_snippet.py

```
1 | from .does_not_exist.foo.bar import add  # error: [unresolved-import]
2 | 
3 | stat = add(10, 15)
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `.does_not_exist.foo.bar`
 --> src/mdtest_snippet.py:1:7
  |
1 | from .does_not_exist.foo.bar import add  # error: [unresolved-import]
  |       ^^^^^^^^^^^^^^^^^^^^^^
2 |
3 | stat = add(10, 15)
  |
info: rule `unresolved-import` is enabled by default

```
