crates/ty_python_semantic/resources/mdtest/snapshots/Unresolved_import_di…_-_unresolved_import.md_-_Using_`from`_with_to…_(a6296c4db3408209).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Unresolved import diagnostics - unresolved_import.md - Using `from` with too many leading dots
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## package/__init__.py

```
```

## package/foo.py

```
1 | def add(x, y):
2 |     return x + y
```

## package/subpackage/subsubpackage/__init__.py

```
1 | from ....foo import add  # error: [unresolved-import]
2 | 
3 | stat = add(10, 15)
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `....foo`
 --> src/package/subpackage/subsubpackage/__init__.py:1:10
  |
1 | from ....foo import add  # error: [unresolved-import]
  |          ^^^
2 |
3 | stat = add(10, 15)
  |
info: rule `unresolved-import` is enabled by default

```
