crates/ty_python_semantic/resources/mdtest/snapshots/assignment_diagnosti…_-_Subscript_assignment…_-_Invalid_value_type_f…_(155d53762388f9ad).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: assignment_diagnostics.md - Subscript assignment diagnostics - Invalid value type for `TypedDict`
mdtest path: crates/ty_python_semantic/resources/mdtest/subscript/assignment_diagnostics.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypedDict
2 | 
3 | class Config(TypedDict):
4 |     retries: int
5 | 
6 | def _(config: Config) -> None:
7 |     config["retries"] = "three"  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Invalid assignment to key "retries" with declared type `int` on TypedDict `Config`
 --> src/mdtest_snippet.py:7:25
  |
7 |     config["retries"] = "three"  # error: [invalid-assignment]
  |     ------ ---------    ^^^^^^^ value of type `Literal["three"]`
  |     |      |
  |     |      key has declared type `int`
  |     TypedDict `Config`
  |
info: Item declaration
 --> src/mdtest_snippet.py:4:5
  |
4 |     retries: int
  |     ------------ Item declared here

```
